@@ -1,0 +1,42 @@
+
+              readwholedir`rw_files+{ptr}
+              libc.so.6`vfprintf+{ptr}
+              libc.so.6`vsprintf+{ptr}
+              libc.so.6`_IO_file_doallocate+{ptr}
+              libc.so.6`_IO_doallocbuf+{ptr}
+              libc.so.6`_IO_file_seekoff+{ptr}
+              libc.so.6`flush_cleanup
+              libc.so.6`_IO_file_attach+{ptr}
+              libc.so.6`fdopen+{ptr}
+              libc.so.6`tmpfile+{ptr}
+              libc.so.6`__libc_main
+              libc.so.6`__invoke_dynamic_linker__
+              libc.so.6`__invoke_dynamic_linker__
+              libc.so.6`strcoll_l+{ptr}
+              libc.so.6`llseek+{ptr}
+              readwholedir`main+{ptr}
+              libc.so.6`__libc_start_main+{ptr}
+              readwholedir`main
+              readwholedir`__libc_csu_init
+
+              readwholedir`rw_files+{ptr}
+              libc.so.6`vfprintf+{ptr}
+              libc.so.6`vsprintf+{ptr}
+              libc.so.6`_IO_file_doallocate+{ptr}
+              libc.so.6`_IO_doallocbuf+{ptr}
+              libc.so.6`_IO_file_seekoff+{ptr}
+              libc.so.6`flush_cleanup
+              libc.so.6`_IO_file_attach+{ptr}
+              libc.so.6`fdopen+{ptr}
+              libc.so.6`tmpfile+{ptr}
+              libc.so.6`__libc_main
+              libc.so.6`__invoke_dynamic_linker__
+              libc.so.6`__invoke_dynamic_linker__
+              libc.so.6`strcoll_l+{ptr}
+              libc.so.6`llseek+{ptr}
+              readwholedir`main+{ptr}
+              libc.so.6`__libc_start_main+{ptr}
+              readwholedir`main
+              readwholedir`__libc_csu_init
+
+
