@@ -1,3 +1,8 @@
+2013-06-28  Nick Alcock  <nick.alcock@oracle.com>
+
+	* test/demo/act/ustack-size.*: New test, ustack() with a size
+	argument.
+
 2013-06-20  Nick Alcock  <nick.alcock@oracle.com>
 
 	Waitfd support.
